Penambahan Method POST dan PUT pada UnitController (superadmin)
